--- a/styles.css
+++ b/styles.css
@@ -8,36 +8,79 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html {
     font-family: "Poppins", sans-serif;
     background-color: #eee;
+    background-color: #161623;
 }
 
 body {
     display: flex;
+    /* width: 700px;
+    position: relative;
+    margin: 0 auto; */
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#f00,#f0f);
+    clip-path: circle(22% at 67% 81%);
+}
+
+body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#2196f3,#e91e63);
+    clip-path: circle(11% at 35% 12%);
 }
 
 .player {
+    position: relative;
     width: 480px;
-    margin: 1% auto ;
-    box-shadow: rgba(34, 34, 56, 0.2) 0px 7px 29px 0px;
-    height: 94vh;
+    margin: 30px auto ;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    height: 90vh;
     display: flex;
     flex-direction: column;
+    z-index: 1;
+    background-color:rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    backdrop-filter: blur(5px);
+    padding-bottom: 20px
 }
 
 .dashbroad {
     padding: 20px;
-    border: 1px solid rgb(240, 240, 240);
-    background-color: white;
+    /* border: 1px solid rgb(240, 240, 240); */
+    /* background-color: white; */
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    background-color:rgba(255, 255, 255, 0.1);
     z-index: 1;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    
 }
 
 .dashbroad_info {
-    display: block;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .dashbroad_info_label {
@@ -47,12 +90,14 @@ body {
 }
 
 .dashbroad_info_name {
-    color: var(--text-color);
+    color: white;
+    /* margin-bottom: 10px; */
 }
 
 .dashbroad_info_cd {
     width: 200px;
-    margin: 20px auto;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .dashbroad_info_cd_image {
@@ -61,23 +106,29 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .dashbroad_control {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
-    margin-top: 30px;
+    margin-bottom: 10px;
+    /* margin-top: 20px; */
 }
 
 .btn {
     font-size: 20px;
     color: var(--primary-color);
     border: none;
-    background-color: white;
+    /* background-color: white; */
+    background-color:transparent;
     cursor: pointer;
     outline: none;
     width: 60px;
+    overflow: hidden;
+    border-radius: 50%;
+    
     -webkit-user-select: none;
     /* Chrome all / Safari all */
     -moz-user-select: none;
@@ -132,6 +183,7 @@ body {
     overflow: hidden;
     cursor: pointer;
     transition: all 0.3 ease-out;
+    border-radius: 5px;
 }
 
 .progress:hover::-webkit-slider-thumb {
@@ -144,13 +196,14 @@ body {
     width: 6px;
     height: 6px;
     background: #d46e89;
-    box-shadow: -500px 0 0 500px #d46e89;
+    box-shadow: -500px 0 0 500px #c51e4b;
 }
 
+
 .playlist {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     overflow-y: auto;
-    /* flex: 1; */
+    
 }
 
 .playlist::-webkit-scrollbar {
@@ -177,6 +230,7 @@ body {
     box-shadow: 0 2px 3px rgb(0 0 0 / 10%);
     margin-bottom: 10px;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .song:active {
