--- a/styles.css
+++ b/styles.css
@@ -181,9 +181,9 @@ body::after {
     -webkit-appearance: none;
     outline: none;
     width: 100%;
-    height: 6px;
+    height: 4px;
     color: var(--primary-color);
-    background: #d8d8d8;
+    background: #b9b9b9;
     overflow: hidden;
     cursor: pointer;
     transition: all 0.3 ease-out;
@@ -191,17 +191,18 @@ body::after {
 }
 
 .progress:hover::-webkit-slider-thumb {
-    background: #c70b3d;
+    background: #ffffff;
     /* box-shadow: -500px 0 0 500px var(--primary-color); */
 }
 
 .progress::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 6px;
-    height: 6px;
-    background: #d46e89;
-    box-shadow: -500px 0 0 500px #c51e4b;
+    height: 12px;
+    box-shadow: -500px 0 0 500px var(--primary-color);
+    /* border-radius: 50%; */
 }
+
 
 
 .playlist {
