--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body::after {
     z-index: 1;
     background-color:rgba(255, 255, 255, 0.1);
     overflow: hidden;
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     padding-bottom: 20px
 }
 
@@ -70,7 +70,7 @@ body::after {
     /* background-color: white; */
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     background-color:rgba(255, 255, 255, 0.1);
     z-index: 1;
     border-top-left-radius: 15px;
