--- a/reponsive.css
+++ b/reponsive.css
@@ -22,10 +22,13 @@
 
 /* Mobile: width < 739px */
 @media only screen and (max-width: 46.1875em) {
+    .body {
+        overflow: hidden;
+    }
     .player{
-        margin: 0 auto ;
-        height: 100vh;
-        padding-bottom: 10px
+        margin: 5% 5%;
+        height: 95vh;
+        padding-bottom: 10px;
     }
     .dashbroad_control {
         margin: 0 0 10px 0;
@@ -33,12 +36,11 @@
     .playlist{
         padding: 10px;
     }
-    body::before {
-        --width: 238px;
-        content: "";
-        position: absolute;
+    .circle1 {
+        --width: 377px;
+        position: fixed;
         top: 401px;
-        left: 146px;
+        left: 188px;
         width: var(--width);
         height: var(--width);
         background: linear-gradient(217deg,rgb(255, 0, 0),rgb(255, 0, 255));
@@ -47,9 +49,8 @@
         filter: blur(5px);
     }
     
-    body::after {
+    .circle2 {
         --width: 120px;
-        content: "";
         position: absolute;
         top: -26px;
         left: -22px;
