--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body {
     z-index: 1;
     background-color:rgba(255, 255, 255, 0.1);
     overflow: hidden;
-    /* backdrop-filter: blur(5px); */
+    backdrop-filter: blur(5px);
     padding-bottom: 20px
 }
 
