--- a/styles.css
+++ b/styles.css
@@ -253,12 +253,13 @@ body {
 }
 
 .song {
-    background-color: white;
+    /* background-color: white; */
+    background-color:rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     display: flex;
     align-items: center;
     padding: 8px 20px;
-    color: var(--text-color);
+    color: rgb(223, 223, 223);
     box-shadow: 0 2px 3px rgb(0 0 0 / 10%);
     margin-bottom: 10px;
     cursor: pointer;
